# ratatui_template

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: inner.rs
core/tabs/: tabs.toml
core/tabs/tab1/: tab_data.toml
core/tabs/tab1/test/: test.sh
core/tabs/tab2/: tab_data.toml
core/tabs/tab2/test/: test.sh
man/: PLACEHOLDER_NAME.1
tui/: Cargo.toml  cool_tips.txt
tui/src/: confirmation.rs  filter.rs  floating_text.rs  running_command.rs  state.rs
xtask/: Cargo.toml
xtask/src/: docgen.rs
