[package]
name = "PLACEHOLDER_NAME_core"
description = "The backend of PLACEHOLDER_TITLE."
#repository = "https://github.com/"
edition = "2021"
version.workspace = true
license.workspace = true
include = ["src/*.rs", "Cargo.toml", "tabs/**"]

[dependencies]
include_dir = "0.7.4"
temp-dir = "0.1.14"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
toml = { version = "0.8.19", features = ["parse"], default-features = false }
which = "7.0.0"
ego-tree = "0.9.0"
